Fix: Some random information text alignment

--- a/style.css
+++ b/style.css
@@ -115,8 +115,8 @@ button {
 .random img {
     border: 4px solid #3882F6;
     border-radius: 0.7em;
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 150px;
     background-color: whitesmoke;
 
 }
@@ -130,4 +130,5 @@ button {
     flex-wrap: wrap;
     max-width: 150px;
     color: rgb(104, 104, 104);
+    text-align: center;
 }
